<resources>
    <string name="app_name">SRC-2</string>
    <string name="yes"> ھا </string>
    <string name="no"> نہ </string>
    <string name="no_answer"> ڪو به جواب نه ڏنو ويو </string>
    <string name="none">  ڪو به نه </string>
   <string name="nothing"> ڪجهه به نه
 </string>
    <string name="dkn"> خبر نه آھي </string>
    <string name="not_applicable">	غير موضوع</string>
    <string name="sometimes">	ڪڏهن ڪڏهن   </string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="istatus">انٹروہو کا نتیجہ</string>
    <string name="istatusa">مکمل</string>
    <string name="istatusb">نا مکمل</string>
    <string name="istatusc">انکار کردیا</string>
    <string name="istatusd">گھر بند ہے</string>
    <string name="nextSection">ايندڙ سيڪشن</string>
    <string name="end_interview">ختم ڪيو</string>
    <string name="correct"> صحيح </string>
    <string name="number">تعداد</string>
    <string name="incorrect"> غلط </string>
    <string name="nores"> جواب نه ڏنو </string>
    <string name="skp"> ڇڏي ڏنو </string>
    <string name="almostN">ڪڏهن به نه</string>
    <string name="some">ڪڏهن ڪڏهن</string>
    <string name="often">اڪثر ڪري</string>
    <string name="almostA">هميشه</string>
    <string name="other"> ٻيو ڪجھ </string>
    <string name="month"> مهينا </string>
    <string name="year"> سال </string>
    <string name="day"> دن </string>
    <string name="f1aHeading">سماجي ڊيموگرافڪ معلومات </string>
    <string name="f1bHeading">سماجي ۽ معاشي معلومات</string>
    <string name="f1cHeading">Section C Housing Characteristics</string>
    <string name="f2Heading">صاف پيئڻ جو پاڻي</string>
    <string name="f2aHeading">بنيادي معلومات</string>
    <string name="f2bHeading">عمل يا طريقا    </string>
    <string name="f3Heading">ماهواري جي دوران صفائي سٿرائي   </string>
    <string name="f4aHeading">حمل دوران سار سنڀال </string>
    <string name="f4bHeading">ويم   </string>
    <string name="f5Heading">حمل جي باري ۾ معلومات   </string>
    <string name="f6Heading">نئين ڄاول ٻار جي سار سنڀال  </string>
    <string name="f7Heading">05 سالن کان گهٽ ٻار جي معلومات  </string>
    <string name="f8Heading">خانداني منصوبابندي  </string>
    <string name="f9aHeading">مائرن نون ڄاول ۽ ٻارن جي اموات جي گذريل معلومات  </string>
    <string name="f9bHeading">سيڪشن بي؛ پنجن سالن کان گهٽ عمر وارن ٻارن جي وفات جي معلومات  </string>
    <string name="f1"> ڊيموگرافڪ </string>
    <string name="f1adate"> دوري جي تاريخ </string>
    <string name="f1a01"> يونين ڪائونسل </string>
    <string name="f1a02"> ڳوٺ / وارڊ جو نالو </string>
    <string name="f1a03"> ڳوٺ / وارڊ جو ڪوڊ </string>
    <string name="f1a04"> گھر جو نمبر </string>
    <string name="f1a05"> مادري زبان </string>
    <string name="f1a05a"> اردو </string>
    <string name="f1a05b"> سنڌي </string>
    <string name="f1a05c"> پنجابي </string>
    <string name="f1a05d"> پشتو </string>
    <string name="f1a05e"> بلوچي </string>
    <string name="f1a05f"> سرائڪي </string>
    <string name="f1bh"> سماجي ۽ معاشي معلومات </string>
    <string name="f1bh1">   نوٽ؛ هي فارم ان جو ڀريو ويندو:  </string>
    <string name="f1bh2">  شادي شده عورت جو ڀريوجنهن جو گهٽ ۾ گهٽ هڪ ٻار 5 سالن گهٽ عمر جو هجي يا منتخب نوجوان ڇوڪري جي ماءُ    </string>
    <string name="f1bh3"> منتخب عورت کان شروعات ڪيو
 </string>
    <string name="f1b01"> گهر ڀاتي جو نالو </string>
    <string name="f1b02"> جنس </string>
    <string name="f1b02a"> مرد </string>
    <string name="f1b02b"> عورت </string>
    <string name="f1b03"> عمر يا ڄمڻ جي تاريخ </string>
    <string name="f1b03a"> عمر  </string>
    <string name="f1b03b">  ڄمڻ جي تاريخ </string>
    <string name="f1b04"> جواب ڏيندڙ سان رشتو </string>
    <string name="f1b04a"> مڙس </string>
    <string name="f1b04b"> پٽ </string>
    <string name="f1b04c"> ڌي </string>
    <string name="f1b04d"> پيءُ </string>
    <string name="f1b04e"> ماءُ </string>
    <string name="f1b04f"> ڀيڻُ </string>
    <string name="f1b04g"> ڀاءُ	 </string>
    <string name="f1b05"> تعليم </string>
    <string name="f1b05a"> ڪيترا سال اسڪول ۾ پڙهيو</string>
    <string name="f1b05b">اڻ پڙهيل</string>
    <string name="f1b05c"> مذهبي تعليم </string>
    <string name="f1b06"> ازواد جي حيثيت </string>
    <string name="f1b06a"> غير شادي شده </string>
    <string name="f1b06b"> شادي شده </string>
    <string name="f1b06c"> طلاق يافته </string>
    <string name="f1b06d"> الڳ، جدا </string>
    <string name="f1b06e"> بيوهه </string>
    <string name="f1b07"> ڪاروبار </string>
    <string name="f1b07a"> پروفيشنل / ٽيڪنيڪل/انتظاميا </string>
    <string name="f1b07b"> ڪلارڪ </string>
    <string name="f1b07c"> خريد ۽ فروخت </string>
    <string name="f1b07d"> تربيت يافته مزدور </string>
    <string name="f1b07e"> غير تربيت يافته مزدور </string>
    <string name="f1b07f"> گھريلو خدمتون </string>
    <string name="f1b07g"> زراعت </string>
    <string name="f1b07h"> ڪاروبار </string>
    <string name="f1b07i"> ننڍو ڪاروبار/ دوڪاندار </string>
    <string name="f1b07j"> بيروزگار </string>
    <string name="f1b07k">رٽائرڊ		 </string>
    <string name="f1b07l"> گھريلو عورت	 </string>
    <string name="f1b07m"> شاگرد </string>
    <string name="f1b07n"> ڪجھ به نه	 </string>
    <string name="f1b07o"> ٻيو ڪجھ	 </string>
    <string name="f1b08"> سال جي آمدني </string>
    <string name="f1b08a"> لاڳو نه ٿو ٿئي</string>
    <string name="f1b09"> ان آمدني جي لاء توهان ڪيترا مهينا ڪم ڪيو. </string>
    <string name="f1c01">گهر جي مالڪاڻي حيثيت ڇا آهي؟</string>
    <string name="f1c01a">ذاتي</string>
    <string name="f1c01b">ڪرائي تي</string>
    <string name="f1c01c">بنا ڪرائي جي رهائش</string>
    <string name="f1c02">ڇا توهان کي رڌ پچاءَ جي لاءِ ڌار بورچي خانو آهي؟</string>
    <string name="f1c03">سمهڻ جي لاءِ هن گهر ۾ ڪيترا ڪمرا استعمال ٿينداآهن؟</string>
    <string name="f1c04">ڪمرن ۾ ڪيترا ماڻهو سمهندا آهن </string>
    <string name="f1c05">توهان وٽ ڪهڙو سامان موجود آهي</string>
    <string name="f1c05a">بجلي</string>
    <string name="f1c05b">استري   </string>
    <string name="f1c05c">فوم وارا گدا  </string>
    <string name="f1c05d">ڪرسي </string>
    <string name="f1c05e">صوفا </string>
    <string name="f1c05f">الماڙي  </string>
    <string name="f1c05g">ٽيبل </string>
    <string name="f1c05h">ريڊيو </string>
    <string name="f1c05i">ڪمپيوٽر  </string>
    <string name="f1c05j">ٽيليويزن  </string>
    <string name="f1c05k">سلائي مشين</string>
    <string name="f1c05l">موبائيل فون  </string>
    <string name="f1c05m">فرج </string>
    <string name="f1c05n">بئنڪ اڪائونٽ</string>
    <string name="endHeading"> انٽرويو جو نتيجو </string>
    <string name="end01"> پورو ٿيو </string>
    <string name="end02"> اڌ ۾ ڇڏيو </string>
    <string name="end03"> انڪار ڪيو </string>
    <string name="end04"> ٻن دورن کان پوء به ڪير به موجوده نه هو </string>
    <string name="end05"> لڏي وئي </string>
    <string name="f2ah"> صاف پيئڻ جو پاڻي </string>
    <string name="f2ah1"> بنيادي معلومات </string>
    <string name="f2a01"> توهان جي گهر ۾ گهرڀاتين ۾ پيئڻ جي پاڻي جو اهم ذريعوڪهڙو آهي؟ </string>
    <string name="f2a01a"> گهر جي اندر واٽر سپلائي جو نلڪو </string>
    <string name="f2a01b"> ٻاهر ميدان ۾ لڳل واٽر سپلائي جو نلڪو </string>
    <string name="f2a01c"> گهٽي ۾ لڳل نلڪو </string>
    <string name="f2a01d"> ٽيوب ويل </string>
    <string name="f2a01e">  نلڪوهٿ وارو </string>
    <string name="f2a01f"> ڍڪيل کوهه </string>
    <string name="f2a01g"> اڻ ڍڪيل کوهه </string>
    <string name="f2a01h"> محفوظ چشمو </string>
    <string name="f2a01i"> غير محفوظ چشمو </string>
    <string name="f2a01j"> برساتي پاڻي </string>
    <string name="f2a01k"> ٽينڪر يا ٽرڪ </string>
    <string name="f2a01l"> فلٽر ٿيل پاڻي </string>
    <string name="f2a01m"> ريڙهي واري ٽانڪي </string>
    <string name="f2a01n"> زميني سطح وارو پاڻي (ندي، ڊيم، ڍنڍ ، تلا، وهندڙ پاڻي، ڪينال </string>
    <string name="f2a01o"> گهگهي وارو پاڻي </string>
    <string name="f2a02"> ڇا گذريل 6 مهينن ۾ توهان جي گهر کي اهم ذريعي مان پاڻيء جي فراهمي معطل ٿي؟ </string>
    <string name="f2a03"> پاڻيءَ جي اهم ذريعي مان معطليءَ دوران ڪيترا ڏينهن پاڻي موجود نه هيو؟ </string>
    <string name="f2a04"> توهان جي گهر ۾ ٻين ڪم ڪارين جهڙوڪ رڌ پچاءُ ، هٿن ڌوئڻ جي لاءِ استعمال ٿيندڙ پاڻيءَ جو اهم ذريعو ڪهڙوآهي؟ </string>
    <string name="f2a04a"> گهر جي اندر واٽر سپلائي جو نلڪو </string>
    <string name="f2a04b"> ٻاهر ميدان ۾ لڳل واٽر سپلائي جو نلڪو </string>
    <string name="f2a04c"> گهٽي ۾ لڳل نلڪو </string>
    <string name="f2a04d"> ٽيوب ويل </string>
    <string name="f2a04e"> نلڪوهٿ وارو </string>
    <string name="f2a04f"> ڍڪيل کوهه </string>
    <string name="f2a04g"> اڻ ڍڪيل کوهه </string>
    <string name="f2a04h"> محفوظ چشمو </string>
    <string name="f2a04i"> غير محفوظ چشمو </string>
    <string name="f2a04j"> برساتي پاڻي </string>
    <string name="f2a04k"> ٽينڪر يا ٽرڪ </string>
    <string name="f2a04l"> فلٽر ٿيل پاڻي </string>
    <string name="f2a04m"> ريڙهي واري ٽانڪي </string>
    <string name="f2a04n"> زميني سطح وارو پاڻي (ندي، ڊيم، ڍنڍ ، تلا، وهندڙ پاڻي، ڪينال </string>
    <string name="f2a04o"> گهگهي وارو پاڻي </string>
    <string name="f2a05"> پاڻيءَجي اهم ذريعي تائين پهچڻ، پاڻي حاصل ڪرڻ ۽ کڻي اچڻ ۾ ڪيترو وقت لڳندو آهي؟ پيئڻ واري پاڻيءَ جي متعلق </string>
    <string name="f2a05a">منٽن ۾</string>
    <string name="f2a05b">گھر ۾ موجود آهي / گهر ۾ پهچايو ويندو آهي</string>
    <string name="f2bh"> عمل يا طريقا </string>
    <string name="f2b01"> ڇا توهان پنهنجي پاڻيءَ کي صاف ڪندا آهيو ڪنهن به طريقي سان جيئين اهو پيئڻ لاءِ محفوظ ۽ بهتر ٿئي؟ </string>
    <string name="f2b02"> پيئڻ جي پاڻي کي صاف ڪرڻ لاءِ توهان اڪثر ڪري ڪهڙو طريقو استعمال ڪندا آهيو؟ اڪثر استعمال ڪيل طريقو ٻڌايو </string>
    <string name="f2b02a"> اٻارڻ </string>
    <string name="f2b02b"> بليچ يا ڪلورين  شامل ڪرڻ </string>
    <string name="f2b02c"> ڪپڙي سان ڇاڻي </string>
    <string name="f2b02d"> منرل وٽر واري بوتل </string>
    <string name="f2b02e"> پاڻي فلٽر استعمال ڪندا آهيون </string>
    <string name="f2b02f"> (ٺڪر،ريت،جامع وغيره) </string>
    <string name="f2b02g"> اس تي رکڻ </string>
    <string name="f2b02h"> آٺرائڻ </string>
    <string name="f2b02i"> ڦٽڪي جو استعال </string>
    <string name="f2b03"> ان طريقي ڪار جو مهيني ۾ خرچ ڪيترو آهي؟ </string>
    <string name="f2b03a"> رپيا </string>
    <string name="f2b03b"> ڪو به خرچ نه </string>
    <string name="f2b04"> جيڪڏهن ڪلورين ٽيبليٽ استعمال ڪندا آهيو ته اهي ڪٿان حاصل ڪندا آهيو </string>
    <string name="f2b04a"> مارڪيٽ مان خريد ڪندا آهيو </string>
    <string name="f2b04b"> آغاخان يونيورسٽي ڪمنيونٽي هيلٿ ورڪر </string>
    <string name="f2b05">جيڪڏهن ڪلورين (ٽيبليٽ) استعمال ڪندا آهيو ته ڇا توهان پاڻي جي ذائقي کان مطمئن آهيو؟</string>
    <string name="f2b06">جيڪڏهن ڪلورين (ٽيبليٽ) استعمال ڪندا آهيو ته ڇا توهان پاڻي جي خوشبو کان مطمئن آهيو؟</string>
    <string name="f2b07">جيڪڏهن ڪلورين (ٽيبليٽ) استعمال ڪندا آهيو ته ڇا توهان پاڻي جي رنگ کان مطمئن آهيو؟</string>
    <string name="f2b08"> توهان جي خيال ۾ پيئڻ جي پاڻي کي محفوظ بنائڻ جو سڀ کان بهترين طريقي ڪار ڇا آهي؟ </string>
    <string name="f2b08a"> اٻارڻ </string>
    <string name="f2b08b"> بليچ يا ڪلورين شامل ڪرڻ </string>
    <string name="f2b08c"> ڪپڙي سان ڇاڻي </string>
    <string name="f2b08d"> منرل وٽر واري بوتل </string>
    <string name="f2b08e"> پاڻي فلٽر استعمال ڪندا آهيون </string>
    <string name="f2b08f"> ٺڪر،ريت،جامع وغيره </string>
    <string name="f2b08g"> اس تي رکڻ </string>
    <string name="f2b08h"> آٺرائڻ </string>
    <string name="f2b08i"> ڦٽڪي جو استعال </string>
    <string name="f2b09"> توهان ان طريقي ڪار کي ڇو ترجيح ڏيو ٿا؟ هڪ کان وڌيڪ جواب </string>
</resources>