<?xml version="1.0" encoding="utf-8"?>
<layout>


    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.src_2.ui.form1.F1SectionAActivity" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.form1.F1SectionAActivity">


        <LinearLayout
            android:id="@+id/fldGrpSectionF1A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">


            <!--f1a01-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f1a01" />

                    <EditText
                        android:inputType="number"
                        style="@style/textInput"
                        android:id="@+id/f1a01"
                        android:hint="@string/f1a01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="2" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--f1a02-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f1a02" />

                    <Spinner
                        android:id="@+id/f1a02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--f1a04-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f1a04" />

                    <EditText
                        android:id="@+id/f1a04"
                        style="@style/textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="xxx-x"
                        android:inputType="number"
                        android:maxLength="5" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--f1a05-->
            <android.support.v7.widget.CardView style="@style/cardView">


                <LinearLayout style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/f1a05" />

                    <RadioGroup
                        android:id="@+id/f1a05"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/f1a05a"
                            style="@style/radiobutton"
                            android:text="@string/f1a05a" />

                        <RadioButton
                            android:id="@+id/f1a05b"
                            style="@style/radiobutton"
                            android:text="@string/f1a05b" />

                        <RadioButton
                            android:id="@+id/f1a05c"
                            style="@style/radiobutton"
                            android:text="@string/f1a05c" />

                        <RadioButton
                            android:id="@+id/f1a05d"
                            style="@style/radiobutton"
                            android:text="@string/f1a05d" />

                        <RadioButton
                            android:id="@+id/f1a05e"
                            style="@style/radiobutton"
                            android:text="@string/f1a05e" />

                        <RadioButton
                            android:id="@+id/f1a05f"
                            style="@style/radiobutton"
                            android:text="@string/f1a05f" />


                        <RadioButton
                            android:id="@+id/f1a0596"
                            style="@style/radiobutton"
                            android:text="@string/other" />


                        <EditText
                            android:id="@+id/f1a0596x"
                            style="@style/textInput"
                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/other"
                            android:inputType="text"
                            android:tag="f1a0596"
                            android:text='@{f1a0596.checked? f1a0596x.getText.toString : ""}'
                            android:visibility='@{f1a0596.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/button"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection" />

                <Button
                    android:id="@+id/btn_End"
                    style="@style/button"
                    android:layout_marginRight="10dp"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>
